# Kagitch

./: .gitignore  AGENTS.md  CHANGELOG.md  LICENSE  README.md  SKILL.md  pyproject.toml
.github/: AGENTS.md
.github/workflows/: AGENTS.md  ci.yml
.omc/: notepad.md
.omc/skills/kagitch-skill/: SKILL.md
.omo/run-continuation/: ses_0ee65a398ffeszNLHQhp7tmmK1.json
assets/: AGENTS.md
src/: AGENTS.md
src/kaggle_switch/: AGENTS.md  __init__.py  checker.py  cli.py  config.py  display.py  init_wizard.py  keychain.py  logs_viewer.py  shell.py  style.py
src/kaggle_switch/commands/: __init__.py  accounts.py  doctor.py  kernel.py  setup.py  switch.py
tests/: AGENTS.md  test_accounts_patch.py  test_checker.py  test_cli.py  test_config.py  test_display.py  test_init_wizard.py  test_kernel.py  test_keychain.py  test_logs_viewer.py  test_setup.py  test_shell.py  test_style.py  test_switch.py
