[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "kagitch"
version = "1.3.0"
description = "Kaggle multi-account manager — switch between Kaggle accounts with one command."
readme = "README.md"
license = "MIT"
requires-python = ">=3.8"
authors = [{ name = "TQuang122" }]
keywords = ["kaggle", "multi-account", "switch", "cli"]
classifiers = [
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Utilities",
]
dependencies = ["rich>=13.0", "keyring>=25.0"]

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-cov"]

[project.scripts]
kagitch = "kaggle_switch.cli:main"

[project.urls]
Homepage = "https://github.com/TQuang122/Kagitch"
Repository = "https://github.com/TQuang122/Kagitch"
Issues = "https://github.com/TQuang122/Kagitch/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/kaggle_switch"]

[tool.pytest.ini_options]
testpaths = ["tests"]
